cabal-version:       2.4

name:                httpz
version:             0.1.0.0
author:              JT Paasch
maintainer:          jt.paasch@gmail.com
extra-source-files:  README.md

executable httpz
  hs-source-dirs:    src
  main-is:           Main.hs
  other-modules:     App.Application, App.Client, App.GET
  build-depends:     base >=4.12.0.0, bytestring, text,
                     aeson, http-client, http-types, http-api-data, req
  default-language:  Haskell2010
